# entavi

./: .gitignore  Cargo.toml  Info.plist  LICENSE  README.md  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  signaling-server.yml  webapp.yml  website.yml
capabilities/: default.json
docs/plans/: 2026-05-20-ui-upgrade-product-feel.md
icons/: icon.icns
public/: icon.crt  icon.key  index.html  renderer.js
signaling-server/: package-lock.json  package.json  wrangler.toml
signaling-server/src/: index.ts  room.ts
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Tauri.toml
src-tauri/src/: audio.rs  engine.rs  main.rs  peer.rs  signaling.rs  types.rs
src/components/: AppBar.vue  ChatPanel.vue  CreateView.vue  HomeView.vue  HostControls.vue  JoinView.vue  MicSelector.vue  ParticipantItem.vue  PingIndicator.vue  QrHomeView.vue  RoomControls.vue  RoomView.vue  ScanView.vue  SettingsModal.vue  ShortcutSettings.vue  SpeakerSelector.vue
src/composables/: useAppState.ts  useTauri.ts  useTauriEvents.ts
src/lib/: callcode.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  window.css
web/src/composables/: useWeb.ts  useWebEvents.ts
web/src/engine/: audio.ts  index.ts  peer.ts  signaling.ts
website/: index.html  styles.css
