[workspace]
members = ["."]

[package]
name = "entavi"
version = "0.1.0-beta.3"
description = "Entavi — peer-to-peer voice calls"
authors = ["Entavi"]
edition = "2021"

[[bin]]
name = "entavi"
path = "src-tauri/src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-notification = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
webrtc = "0.11"
cpal = "0.15"
opus = "0.3"
ringbuf = "0.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
flume = "0.11"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
rand = "0.8"
nnnoiseless = "0.5.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
